feat(css): create custom color theme and normalize

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -30,6 +30,6 @@ const { title, description, ...rest } = Astro.props;
         padding: var(--size-8);
         border-radius: var(--radius-2);
         box-shadow: var(--shadow-4);
-        max-width: var(--content-3);
+        max-width: var(--size-content-3);
     }
 </style>
