--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,3 @@
 @import "open-props/src/props.media.css";
-@import "open-props/normalize";
-@import "open-props/buttons";
+@import "~/styles/color-theme.css";
+@import "~/styles/custom-normalize.css";
