feat: install and run eslint then fix

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,9 +1,7 @@
 ---
-import type Image from "astro/components/Image.astro";
 import ButtonLink from "~/components/ButtonLink.astro";
-import type BaseLayout from "~/layouts/BaseLayout.astro";
 
-export interface Props {
+export type Props = {
 	title: string;
 	description: string;
 	ctaText: string;
