--- a/src/styles/color-theme.css
+++ b/src/styles/color-theme.css
@@ -1,6 +1,8 @@
 @import "open-props/src/props.media.css";
 
 :where(html) {
+	--brand: var(--orange-7);
+	--accent: var(--indigo-7);
 	--link: var(--orange-7);
 	--link-visited: var(--pink-7);
 	--text-1: var(--gray-9);
@@ -12,6 +14,8 @@
 	--scrollthumb-color: var(--gray-7);
 	-webkit-text-size-adjust: none;
 	@media (--OSdark) {
+		--brand: var(--orange-3);
+		--accent: var(--indigo-3);
 		--link: var(--orange-3);
 		--link-visited: var(--pink-3);
 		--text-1: var(--gray-1);
