feat: add header with desktop and mobile navs

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,10 +1,7 @@
 ---
 import BaseHead, { type Props as HeadProps } from "~/components/BaseHead.astro";
-// import Footer from "~/components/Footer.astro"
-// import Header from "~/components/Header.astro"
-// import HeaderDrawerContent from "~/components/HeaderDrawerContent.astro"
-// import HeaderNav from "~/components/HeaderNav.astro"
-// import SkipLink from "~/components/SkipLink.astro"
+import SkipLink from "~/components/SkipLink.astro";
+import Header from "~/components/Header.astro";
 import "~/styles/global.css";
 
 export type Props = HeadProps;
@@ -18,6 +15,17 @@ const { ...head } = Astro.props;
 		<BaseHead {...head} />
 	</head>
 	<body>
+		<SkipLink text="Skip to main content" />
+		<Header />
 		<slot />
+		<style>
+			html.disclosure-open {
+				overflow-y: hidden;
+			}
+
+			html.disclosure-open #nav {
+				overflow-y: auto;
+			}
+		</style>
 	</body>
 </html>
