--- a/src/styles/color-theme.css
+++ b/src/styles/color-theme.css
@@ -4,6 +4,7 @@
 	--brand: var(--orange-7);
 	--accent: var(--indigo-7);
 	--link: var(--orange-7);
+	--link-hover: var(--orange-9);
 	--link-visited: var(--pink-7);
 	--text-1: var(--gray-9);
 	--text-2: var(--gray-7);
@@ -11,19 +12,28 @@
 	--surface-2: var(--gray-2);
 	--surface-3: var(--gray-3);
 	--surface-4: var(--gray-4);
+	--surface-1-hsl: var(--gray-0-hsl);
+	--surface-2-hsl: var(--gray-2-hsl);
+	--surface-3-hsl: var(--gray-3-hsl);
+	--surface-4-hsl: var(--gray-4-hsl);
 	--scrollthumb-color: var(--gray-7);
 	-webkit-text-size-adjust: none;
 	@media (--OSdark) {
 		--brand: var(--orange-3);
 		--accent: var(--indigo-3);
 		--link: var(--orange-3);
+		--link-hover: var(--orange-1);
 		--link-visited: var(--pink-3);
 		--text-1: var(--gray-1);
-		--text-2: var(--gray-4);
+		--text-2: var(--gray-5);
 		--surface-1: var(--gray-9);
 		--surface-2: var(--gray-8);
 		--surface-3: var(--gray-7);
 		--surface-4: var(--gray-6);
+		--surface-1-hsl: var(--gray-9-hsl);
+		--surface-2-hsl: var(--gray-8-hsl);
+		--surface-3-hsl: var(--gray-7-hsl);
+		--surface-4-hsl: var(--gray-6-hsl);
 		--scrollthumb-color: var(--gray-6);
 		--shadow-strength: 10%;
 		--shadow-color: 220 40% 2%;
