feat: create blog single and prose utility class

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,5 +27,9 @@ const { ...head } = Astro.props;
 				overflow-y: auto;
 			}
 		</style>
-	</body>
+	</body><style>
+		body {
+			overflow-x: hidden;
+		}
+	</style>
 </html>
