--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,7 +49,7 @@ import HeaderNav from "~/components/HeaderNav.astro";
 		min-block-size: var(--size-10);
 	}
 	button {
-		margin-inline-end: var(--size-5);
+		margin-inline-start: var(--size-5);
 		background-color: transparent;
 		background-image: none;
 		color: var(--text-2);
