--- a/src/styles/custom-normalize.css
+++ b/src/styles/custom-normalize.css
@@ -83,18 +83,18 @@
 	line-height: var(--font-lineheight-1);
 }
 :where(h1) {
-	font-size: var(--font-size-8);
+	font-size: var(--font-size-fluid-3);
 	max-inline-size: var(--size-header-1);
 }
 :where(h2) {
-	font-size: var(--font-size-6);
+	font-size: var(--font-size-fluid-2);
 	max-inline-size: var(--size-header-2);
 }
 :where(h3) {
-	font-size: var(--font-size-5);
+	font-size: var(--font-size-fluid-1);
 }
 :where(h4) {
-	font-size: var(--font-size-4);
+	font-size: var(--font-size-fluid-0);
 }
 :where(h5) {
 	font-size: var(--font-size-3);
