--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import BaseHead, { type Props as HeadProps } from "~/components/BaseHead.astro";
 import SkipLink from "~/components/SkipLink.astro";
 import Header from "~/components/Header.astro";
+import Footer from "~/components/Footer.astro";
 import "~/styles/global.css";
 
 export type Props = HeadProps;
@@ -18,16 +19,15 @@ const { ...head } = Astro.props;
 		<SkipLink text="Skip to main content" />
 		<Header />
 		<slot />
-		<style>
-			html.disclosure-open {
-				overflow-y: hidden;
-			}
-
-			html.disclosure-open #nav {
-				overflow-y: auto;
-			}
-		</style>
+		<Footer />
 	</body><style>
+		html.disclosure-open {
+			overflow-y: hidden;
+		}
+
+		html.disclosure-open #nav {
+			overflow-y: auto;
+		}
 		body {
 			overflow-x: hidden;
 		}
