fix: fix random gradients not imported by JIT

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "open-props/src/props.media.css";
+@import "open-props/gradients";
 @import "~/styles/color-theme.css";
 @import "~/styles/custom-normalize.css";
 @import "~/styles/prose.css";
