--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,6 +49,7 @@ import SchemeToggle from "~/components/SchemeToggle.astro";
 		display: flex;
 		align-items: center;
 		min-block-size: var(--size-10);
+		gap: var(--size-3);
 	}
 	button {
 		margin-inline-start: var(--size-5);
