--- a/src/components/SchemeToggle.astro
+++ b/src/components/SchemeToggle.astro
@@ -1,29 +1,18 @@
 <button
-	class="themeToggle"
+	class="theme-toggle"
 	id="theme-toggle"
+	title="Toggles light & dark"
 	aria-label="auto"
 	aria-live="polite"
 >
-	<svg
-		class="sunAndMoon"
-		aria-hidden="true"
-		width="24"
-		height="24"
-		viewBox="0 0 24 24"
-	>
-		<mask class="moon" id="moon-mask">
-			<rect x="0" y="0" width="100%" height="100%" fill="white" stroke="none"
-			></rect>
-			<circle cx="24" cy="10" r="6" fill="black" stroke="none"></circle>
+	<svg aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
+		<!-- https://feathericons.com/?query=sun -->
+		<mask id="moon">
+			<rect x="0" y="0" width="100%" height="100%" fill="white"></rect>
+			<circle cx="40" cy="8" r="11" fill="black"></circle>
 		</mask>
-		<circle
-			class="sun"
-			cx="12"
-			cy="12"
-			r="6"
-			mask="url(#moon-mask)"
-			fill="currentColor"></circle>
-		<g class="sunBeams" stroke="currentColor">
+		<circle id="sun" cx="12" cy="12" r="11" mask="url(#moon)"></circle>
+		<g id="sun-beams">
 			<line x1="12" y1="1" x2="12" y2="3"></line>
 			<line x1="12" y1="21" x2="12" y2="23"></line>
 			<line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
@@ -36,101 +25,63 @@
 	</svg>
 </button>
 
-<style>
-	/* Default CSS goes here */
-	.sunAndMoon > :is(.moon, .sun, .sunBeams) {
+<style is:global>
+	.theme-toggle {
+		background: none;
+		--nav-icon: var(--text-2);
+		--nav-icon-hover: var(--brand);
+	}
+
+	#moon,
+	#sun {
+		fill: var(--nav-icon);
+		stroke: none;
+
+		@nest :hover > svg > & {
+			fill: var(--nav-icon-hover);
+		}
+	}
+
+	#sun {
+		transition: transform 0.5s var(--ease-4);
 		transform-origin: center center;
 	}
-	.sunAndMoon > .moon > circle {
-		transform: translate(2px);
-	}
-	.sunAndMoon > :is(.moon, .sun) {
-		fill: var(--icon-fill);
-		stroke: var(--icon-fill);
-	}
-	.themeToggle:is(:hover, :focus-visible) > .sunAndMoon > :is(.moon, .sun) {
-		fill: var(--icon-fill-hover);
-		stroke: var(--icon-fill-hover);
-	}
-	.sunAndMoon > .sunBeams {
-		stroke: var(--icon-fill);
+
+	#sun-beams {
+		--_opacity-dur: 0.15s;
+		stroke: var(--nav-icon);
 		stroke-width: 2px;
-	}
-	.themeToggle:is(:hover, :focus-visible) .sunAndMoon > .sunBeams {
-		stroke: var(--icon-fill-hover);
-	}
-	[data-theme="dark"] .sunAndMoon > .sun {
-		transform: scale(1.75);
-	}
-	[data-theme="dark"] .sunAndMoon > .sunBeams {
-		opacity: 0;
-	}
-	[data-theme="dark"] .sunAndMoon > .moon > circle {
-		transform: translate(-7px);
-	}
-	@supports (cx: 1) {
-		[data-theme="dark"] .sunAndMoon > .moon > circle {
-			transform: translate(0);
-			cx: 17;
+		transform-origin: center center;
+		transition: transform 0.5s var(--ease-elastic-4),
+			opacity var(--_opacity-dur) var(--ease-3);
+
+		@nest :hover > svg > & {
+			stroke: var(--nav-icon-hover);
 		}
 	}
 
-	@media (prefers-reduced-motion: no-preference) {
-		.sunAndMoon > .sun {
-			transition: transform 0.5s var(--ease-elastic-3);
+	#moon > circle {
+		transition: transform 0.5s var(--ease-out-3);
+	}
+
+	[data-theme="light"] {
+		& #sun {
+			transform: scale(0.5);
 		}
-		.sunAndMoon > .sunBeams {
-			transition: transform 0.5s var(--ease-elastic-4),
-				opacity 0.5s var(--ease-3);
-		}
-		.sunAndMoon .moon > circle {
-			transition: transform 0.25s var(--ease-out-5);
-		}
-		@supports (cx: 1) {
-			.sunAndMoon .moon > circle {
-				transition: cx 0.25s var(--ease-out-5);
-			}
-		}
-		[data-theme="dark"] .sunAndMoon > .sun {
-			transform: scale(1.75);
-			transition-timing-function: var(--ease-3);
-			transition-duration: 0.25s;
-		}
-		[data-theme="dark"] .sunAndMoon > .sunBeams {
-			transform: rotate(-25deg);
-			transition-duration: 0.15s;
-		}
-		[data-theme="dark"] .sunAndMoon > .moon > circle {
-			transition-delay: 0.25s;
-			transition-duration: 0.5s;
+
+		& #sun-beams {
+			transform: rotateZ(0.25turn);
+			--_opacity-dur: 0.5s;
 		}
 	}
 
-	.themeToggle {
-		--size: 1.5em;
-		--icon-fill: var(--text-2);
-		--icon-fill-hover: var(--links);
-		background: none;
-		border: none;
-		padding: 0;
-		inline-size: var(--size);
-		block-size: var(--size);
-		margin-block: auto;
-		margin-inline-start: var(--size);
-		border-radius: 50%;
-		cursor: pointer;
-		touch-action: manipulation;
-		-webkit-tap-highlight-color: transparent;
-		outline-offset: 5px;
-	}
-	.themeToggle > svg {
-		inline-size: 100%;
-		block-size: 100%;
-		stroke-linecap: round;
-	}
-	@media (min-width: 539px) {
-		.themeToggle {
-			order: 3;
+	[data-theme="dark"] {
+		& #moon > circle {
+			transform: translateX(-20px);
+		}
+
+		& #sun-beams {
+			opacity: 0;
 		}
 	}
 </style>
@@ -146,15 +97,18 @@
 	};
 
 	const setPreference = () => {
-		localStorage.setItem("theme-preference", theme.value);
+		localStorage.setItem("theme-preference", theme.value ?? "light");
 		reflectPreference();
 	};
 
 	const reflectPreference = () => {
-		document.firstElementChild.setAttribute("data-theme", theme.value);
+		document.firstElementChild?.setAttribute(
+			"data-theme",
+			theme.value ?? "light",
+		);
 		document
 			.querySelector("#theme-toggle")
-			?.setAttribute("aria-label", theme.value);
+			?.setAttribute("aria-label", theme.value ?? "light");
 	};
 
 	const theme = {
@@ -168,7 +122,7 @@
 		// set on load so screen readers can see latest value on the button
 		reflectPreference();
 
-		document.querySelector("#theme-toggle").addEventListener("click", (e) => {
+		document.querySelector("#theme-toggle")?.addEventListener("click", (e) => {
 			theme.value = theme.value === "light" ? "dark" : "light";
 
 			setPreference();
