--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,10 @@
 @import "~/styles/custom-normalize.css";
 @import "~/styles/prose.css";
 
-html {
+:root {
 	--site-width: 60rem;
 }
+
 .container {
 	margin-inline: auto;
 	width: 100%;
