feat: add  category search and improve about

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,16 +10,10 @@ const socialLinks = siteInfo.socialLinks;
 		<a class="link" href="/privacy">Privacy Policy</a>
 		<a class="link mr-auto" href="/terms">Terms of Use</a>
 		<p class="col-span-2 text-center md:col-span-1">
-			<a
-				href="https://github.com/cbontems/astroprops/blob/main/LICENSE"
-				target="_blank"
-				class="link">MIT License</a
-			> &copy; {new Date().getFullYear()}
-			<a
-				href="https://github.com/cbontems/astroprops/graphs/contributors"
-				class="link"
-				target="_blank">AstroProps Contributors</a
-			>
+			<a href="/license" target="_blank">MIT License</a> &copy; {
+				new Date().getFullYear()
+			}
+			<a href="/contributors" target="_blank">AstroProps Contributors</a>
 		</p>
 		<SocialLinks links={socialLinks} />
 	</nav>
