--- a/src/components/Category.astro
+++ b/src/components/Category.astro
@@ -19,14 +19,17 @@ const { name } = Astro.props;
 		font-weight: var(--font-weight-3);
 		padding-block: var(--size-2);
 		padding-inline: var(--size-6);
-		border: var(--border-size-1) solid var(--link);
+		border: var(--border-size-2) solid var(--link);
 		border-radius: var(--radius-round);
 		background-color: transparent;
 		@media (--motionOK) {
 			transition: background-color 0.2s ease-in-out;
 		}
-	}
-	a:hover {
-		background-color: hsl(var(--link-hsl) / 15%);
+		&:visited {
+			border-color: var(--link-visited);
+		}
+		&:hover {
+			background-color: hsl(var(--link-hsl) / 15%);
+		}
 	}
 </style>
