--- a/src/pages/categories/[slug].astro
+++ b/src/pages/categories/[slug].astro
@@ -1,16 +1,29 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "~/layouts/MainLayout.astro";
-import Category from "~/components/Category.astro";
-import siteInfo from "~/data/site-info";
 import HistoryBackButton from "~/components/HistoryBackButton.astro";
+import { getCategories, getPostsByCategory } from "~/helpers/categories";
+import siteInfo from "~/data/site-info";
+import PostPreview from "~/components/PostPreview.astro";
 
-import { getCategories } from "~/helpers/categories";
-import Search from "~/components/Search.astro";
+export async function getStaticPaths() {
+	const posts = await getCollection("blog");
 
-const posts = await getCollection("blog");
+	const categories = getCategories(posts);
 
-let categories = getCategories(posts);
+	return categories.map((category: string) => {
+		return {
+			params: { slug: category },
+			props: { category: category },
+		};
+	});
+}
+
+const { category } = Astro.props as { category: string };
+
+const posts = await getCollection("blog", ({ data }) => !data.draft);
+
+const categoryPosts = getPostsByCategory(posts, category);
 
 const placeholderGradient = `var(--gradient-${
 	Math.floor(Math.random() * 30) + 1
@@ -18,33 +31,28 @@ const placeholderGradient = `var(--gradient-${
 ---
 
 <Layout
-	title={`The ${siteInfo.name} Blog`}
-	description={`Get all the latest news from ${siteInfo.name}`}
+	title={`Category:${category}`}
+	description={`Browse all ${siteInfo.name} posts about ${category}`}
 	image={{ src: "/og/blog.jpg", alt: `The ${siteInfo.name} Blog` }}
 >
 	<div class="container">
 		<div class="placeholder-gradient"></div>
 		<header>
 			<HistoryBackButton text="Back" />
-			<h1>All Categories</h1>
-			<p>Search posts by category.</p>
+			<h1>{category}</h1>
+			<p>Browse all posts in <br />the {category} category.</p>
 		</header>
 		<hr />
 
 		<ul>
 			{
-				categories.map((category) => (
+				categoryPosts.map((post) => (
 					<li>
-						<Category name={category} />
+						<PostPreview post={post} />
 					</li>
 				))
 			}
 		</ul>
-		<!-- <Search
-		id="catalogsearch"
-		selector="#catalog li"
-		groupSelector="#catalog > section"
-		placeholder="search" /> -->
 	</div>
 </Layout>
 
@@ -52,17 +60,13 @@ const placeholderGradient = `var(--gradient-${
 	@import "open-props/src/props.media.css";
 	@import "open-props/gradients";
 	ul {
-		max-inline-size: var(--size-content-2);
-		margin-inline: auto;
 		list-style: none;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-wrap: wrap;
-		gap: var(--size-4);
 		padding-inline-start: 0;
 		margin-block-start: 0;
 		margin-block-end: 0;
+		& > * + * {
+			margin-block-start: var(--size-9);
+		}
 	}
 	li {
 		max-inline-size: initial;
