refactor: create hr with deco options

--- a/src/components/PostPreview.astro
+++ b/src/components/PostPreview.astro
@@ -2,7 +2,7 @@
 import { type CollectionEntry } from "astro:content";
 import { format } from "date-fns";
 import { resolveCoverImage } from "~/helpers/posts";
-import { Image, Picture } from "@astrojs/image/components";
+import { Picture } from "@astrojs/image/components";
 
 export type Props = {
 	post: CollectionEntry<"blog">;
