--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -6,6 +6,7 @@ import Layout from "~/layouts/MainLayout.astro";
 import PostPreview from "~/components/PostPreview.astro";
 import siteInfo from "~/data/site-info";
 import HistoryBackButton from "~/components/HistoryBackButton.astro";
+import StyledHr from "~/components/StyledHr.astro";
 
 export const prerender = true;
 
@@ -44,7 +45,7 @@ const placeholderGradient = `var(--gradient-${
 			<h1>{`${siteInfo.name} Blog`}</h1>
 			<p>Explore all the articles <br />I’ve posted.</p>
 		</header>
-		<hr />
+		<StyledHr rand />
 
 		<ul>
 			{
@@ -126,12 +127,5 @@ const placeholderGradient = `var(--gradient-${
 		font-family: var(--font-mono);
 		color: var(--text-2);
 		opacity: 0.7;
-	}
-	hr {
-		margin-inline: var(--size-9);
-		margin-block-start: var(--size-4);
-		margin-block-end: var(--size-9);
-		background-color: var(--link);
-		opacity: 0.2;
 	}
 </style>
