--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -2,6 +2,7 @@
 import { CollectionEntry, getCollection } from "astro:content";
 import { format } from "date-fns";
 import HistoryBackButton from "~/components/HistoryBackButton.astro";
+import StyledHr from "~/components/StyledHr.astro";
 import MainLayout from "~/layouts/MainLayout.astro";
 
 export const prerender = true;
@@ -38,7 +39,7 @@ const placeholderGradient = `var(--gradient-${
 			</p>
 			<h1>{seo.title}</h1>
 		</header>
-		<hr />
+		<StyledHr rand />
 		<article class="prose">
 			<Content />
 		</article>
@@ -101,23 +102,5 @@ const placeholderGradient = `var(--gradient-${
 		font-family: var(--font-mono);
 		color: var(--text-2);
 		opacity: 0.7;
-	}
-	hr {
-		max-inline-size: var(--size-header-1);
-		margin-inline: auto;
-		margin-block-start: var(--size-4);
-		margin-block-end: var(--size-9);
-		background-color: var(--link);
-		overflow: visible;
-		text-align: center;
-		line-height: var(--border-size-1);
-
-		&::after {
-			content: "×";
-			color: var(--link);
-			display: inline;
-			background-color: var(--surface-1);
-			padding-inline: var(--size-1);
-		}
 	}
 </style>
