--- a/src/components/HeaderNav.astro
+++ b/src/components/HeaderNav.astro
@@ -2,6 +2,7 @@
 import siteInfo from "~/data/site-info.js";
 import SiteLogo from "~/components/SiteLogo.astro";
 import SocialLinks from "~/components/SocialLinks.astro";
+import { Icon } from "astro-icon";
 const socialLinks = siteInfo.socialLinks.filter((link) => !link.footerOnly);
 ---
 
@@ -11,6 +12,16 @@ const socialLinks = siteInfo.socialLinks.filter((link) => !link.footerOnly);
 	<li><a href="/posts/">Posts</a></li>
 	<li><a href="/categories/" rel="prefetch">Categories</a></li>
 	<li><a href="/about/" rel="prefetch">About</a></li>
+	<li>
+		<a href="/search-posts/" rel="prefetch">
+			<Icon
+				pack="heroicons-outline"
+				name="search"
+				size={24}
+				aria-hidden="true"
+			/>
+			<span class="sr-only">Search</span></a>
+	</li>
 </ul>
 
 <div class="spacer"></div>
