--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -1,5 +1,5 @@
 ---
-import { Sprite } from "astro-icon";
+import { Icon } from "astro-icon";
 export interface Props {
 	id: string;
 	placeholder: string;
@@ -7,74 +7,125 @@ export interface Props {
 	groupSelector?: string;
 }
 const { id, placeholder, selector, groupSelector } = Astro.props as Props;
-const inlineStyle = `
-    ${selector}[hidden] {
-        display: none;
-    }
-`;
 ---
 
-<section>
+<form>
 	<label>
-		<input type="text" id={id} placeholder={placeholder} />
+		<input type="text" id={id} placeholder={placeholder} autofocus />
 		<div>
-			<Sprite
+			<Icon
 				pack="heroicons-outline"
 				name="search"
 				size={24}
 				aria-hidden="true"
 			/>
 		</div>
-		<span class="sr-only visually-hidden">Search</span>
+		<span class="sr-only">Search</span>
 	</label>
-</section>
+</form>
 
-<style set:html={inlineStyle}></style>
+<style>
+	@import "open-props/src/props.media.css";
+	form {
+		display: flex;
+		justify-content: flex-end;
+		width: calc(25ch + 2.5rem);
+		min-width: calc(25ch + 2.5rem);
+		margin-inline: auto;
+		margin-block: var(--size-9);
+	}
+	label {
+		display: flex;
+		align-items: center;
+		border-radius: var(--radius-round);
+		background-color: var(--input-color);
+		padding: var(--size-1) var(--size-2);
+		&:focus-within {
+			outline-color: var(--brand, var(--link));
+			outline-style: solid;
+			outline-width: initial;
+			outline-offset: 5px;
+			@media (--motionOK) {
+				transition-duration: 0.25s;
+				transition: outline-offset 145ms var(--ease-2);
+			}
+		}
+	}
+
+	input {
+		background-color: transparent;
+		line-height: 2.5rem;
+		width: 25ch;
+		padding-inline-start: 2ch;
+		outline: none;
+	}
+	div {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 2.5rem;
+		height: 2.5rem;
+		border-radius: var(--radius-round);
+		background-color: var(--brand);
+		color: var(--surface-1);
+	}
+</style>
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=URLSearchParams"
 ></script>
 <script type="module" define:vars={{ selector, groupSelector, id }}>
 	/* https://gomakethings.com/how-to-create-a-search-page-for-a-static-website-with-vanilla-js/ */
 	const stopWords = [
-		"un",
-		"une",
-		"et",
-		"sont",
-		"ne sont pas",
-		"comme",
-		"par",
-		"peut",
-		"ne peut pas",
-		"pourrait",
-		"ne pourrait pas",
-		"comment",
-		"est",
-		"n'est pas",
-		"ça",
-		"ces",
-		"c'est",
-		"ceci",
-		"le",
-		"leur",
-		"là",
-		"eux",
-		"ils",
-		"à",
-		"aussi",
-		"nous",
-		"très",
-		"était",
-		"bien",
-		"où",
-		"quoi",
-		"quel",
-		"quand",
+		"a",
+		"an",
+		"and",
+		"are",
+		"aren't",
+		"as",
+		"by",
+		"can",
+		"cannot",
+		"can't",
+		"could",
+		"couldn't",
+		"how",
+		"is",
+		"isn't",
+		"it",
+		"its",
+		"it's",
+		"that",
+		"the",
+		"their",
+		"there",
+		"they",
+		"they're",
+		"them",
+		"to",
+		"too",
+		"us",
+		"very",
+		"was",
+		"we",
+		"well",
+		"were",
+		"what",
+		"whatever",
+		"when",
+		"whenever",
 		"where",
-		"avec",
-		"tu",
-		"toi",
-		"ton",
-		"tes",
+		"with",
+		"would",
+		"yet",
+		"you",
+		"your",
+		"yours",
+		"yourself",
+		"yourselves",
+		"the",
+		"vanilla",
+		"javascript",
+		"js",
 	];
 	const input = document.getElementById(id);
 	const items = document.querySelectorAll(selector);
@@ -87,15 +138,18 @@ const inlineStyle = `
 			timer = setTimeout(() => fn.apply(this, args), timeout);
 		};
 	}
-	const updateOpen = () => {
-		requestAnimationFrame(() => {
-			!!input.value || document.activeElement === input
-				? input.parentElement.setAttribute("open", "")
-				: input.parentElement.removeAttribute("open");
-		});
+
+	const init = () => {
+		for (const item of items) {
+			item.setAttribute("hidden", "");
+		}
 	};
 	const update = () => {
-		updateOpen();
+		if (input.value.length === 0) {
+			init();
+			updateURL();
+			return;
+		}
 		const regexMap = input.value
 			.toLowerCase()
 			.split(" ")
@@ -133,72 +187,9 @@ const inlineStyle = `
 		input.value = params.get("q") || "";
 	};
 	input.addEventListener("input", debounce(update, FPS_30), true);
-	input.addEventListener("focus", updateOpen, true);
-	input.addEventListener("blur", updateOpen, true);
 	hydrateQuery();
 	update();
+	window.addEventListener("load", function (e) {
+		window.setTimeout(() => input.focus(), 150);
+	});
 </script>
-<style>
-	section {
-		@apply flex justify-end;
-		width: calc(25ch + 2.5rem);
-		min-width: calc(25ch + 2.5rem);
-	}
-	label {
-		@apply flex rounded-full p-1 bg-neutral-50;
-	}
-	input {
-		@apply pl-3 bg-transparent outline-none;
-		line-height: 2.5rem;
-		width: 25ch;
-	}
-	input::placeholder {
-		@apply text-primary-900 opacity-75;
-	}
-	div {
-		@apply flex items-center justify-center w-10 h-10 rounded-full bg-primary-700 text-neutral-50;
-	}
-	@media (max-width: 768px) {
-		label,
-		section {
-			@apply w-full;
-		}
-		input {
-			@apply flex-1 max-w-none;
-		}
-	}
-	@media (hover: hover) {
-		label {
-			@apply bg-transparent;
-		}
-		label:not([open]) input {
-			@apply max-w-0 pl-0;
-		}
-		input,
-		div {
-			transition: 250ms ease;
-		}
-		input:focus,
-		input:not(:placeholder-shown) {
-			padding: 0 0.5rem;
-			padding-left: 0.75rem;
-		}
-		div {
-			@apply bg-transparent text-primary-900;
-		}
-		label:hover,
-		label[open] {
-			@apply bg-neutral-50;
-		}
-		label:hover > input {
-			max-width: 25ch;
-			padding: 0 0.5rem;
-			padding-left: 0.75rem;
-		}
-		label:hover > div,
-		input:focus + div,
-		input:not(:placeholder-shown) + div {
-			@apply bg-primary-700 text-neutral-50;
-		}
-	}
-</style>
