--- a/src/pages/search-posts.astro
+++ b/src/pages/search-posts.astro
@@ -1,33 +1,23 @@
 ---
-import { GetStaticPathsOptions, Page } from "astro";
 import { CollectionEntry, getCollection } from "astro:content";
-import Pagination from "~/components/Pagination.astro";
 import Layout from "~/layouts/MainLayout.astro";
-import PostPreview from "~/components/PostPreview.astro";
+import Category from "~/components/Category.astro";
 import siteInfo from "~/data/site-info";
 import HistoryBackButton from "~/components/HistoryBackButton.astro";
+
+import { getCategories } from "~/helpers/categories";
+import Search from "~/components/Search.astro";
 import StyledHr from "~/components/StyledHr.astro";
+import PostPreview from "~/components/PostPreview.astro";
 
-export const prerender = true;
+const posts = await getCollection("blog");
+const categories = getCategories(posts);
 
-export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
-	// fetch all showcase sites
-	const posts = await getCollection("blog");
+const sortedPosts = posts.sort(
+	(a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
+		b.data.publishDate.getTime() - a.data.publishDate.getTime(),
+);
 
-	// sort featured sites to the front, randomize the rest
-	const sortedPosts = posts.sort(
-		(a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
-			b.data.publishDate.getTime() - a.data.publishDate.getTime(),
-	);
-
-	return paginate(sortedPosts, { pageSize: siteInfo.postPerPage });
-}
-
-const { page } = Astro.props as { page: Page<CollectionEntry<"blog">> };
-
-const allPages = [...Array(page.lastPage).keys()].map((num) => {
-	return `/posts${num === 0 ? "" : `/${String(num + 1)}`}`;
-});
 const placeholderGradient = `var(--gradient-${
 	Math.floor(Math.random() * 30) + 1
 })`;
@@ -42,22 +32,35 @@ const placeholderGradient = `var(--gradient-${
 		<div class="placeholder-gradient"></div>
 		<header>
 			<HistoryBackButton text="Back" />
-			<h1>{`${siteInfo.name} Blog`}</h1>
-			<p>Explore our articles.</p>
+			<h1>Search Posts</h1>
+			<p>Select a category or search <br />for a keyword.</p>
 		</header>
 		<StyledHr rand />
 
 		<ul>
 			{
-				page.data.map((post) => (
+				categories.map((category) => (
+					<li>
+						<Category name={category} />
+					</li>
+				))
+			}
+		</ul>
+		<Search
+			id="catalogsearch"
+			selector="#catalog li"
+			placeholder={"Search posts"}
+		/>
+
+		<ul id="catalog">
+			{
+				sortedPosts.map((post) => (
 					<li>
 						<PostPreview post={post} />
 					</li>
 				))
 			}
 		</ul>
-
-		<Pagination restRoute allPages={allPages} page={page} />
 	</div>
 </Layout>
 
@@ -65,12 +68,19 @@ const placeholderGradient = `var(--gradient-${
 	@import "open-props/src/props.media.css";
 	@import "open-props/gradients";
 	ul {
+		max-inline-size: var(--size-content-3);
+		margin-inline: auto;
 		list-style: none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: var(--size-4);
 		padding-inline-start: 0;
 		margin-block-start: 0;
 		margin-block-end: 0;
-		& > * + * {
-			margin-block-start: var(--size-9);
+		&:nth-of-type(2) {
+			gap: var(--size-9);
 		}
 	}
 	li {
