--- a/src/styles/custom-normalize.css
+++ b/src/styles/custom-normalize.css
@@ -328,7 +328,7 @@
 			select,
 			input:not([type="button"], [type="submit"], [type="reset"])
 		) {
-		background-color: #171a1c;
+		background-color: var(--input-color);
 	}
 	:where(dialog) {
 		background-color: var(--surface-2);
