--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -4,12 +4,22 @@ export type Props = {
 	ctaUrl: string;
 	ctaIcon?: string;
 	external?: boolean;
+	outline?: boolean;
 };
 
-const { ctaText, ctaUrl, ctaIcon = "", external = false } = Astro.props;
+const {
+	ctaText,
+	ctaUrl,
+	ctaIcon = "",
+	external = false,
+	outline = false,
+} = Astro.props;
 ---
 
-<a href={ctaUrl} target={external ? "_blank" : "_self"}
+<a
+	href={ctaUrl}
+	target={external ? "_blank" : "_self"}
+	class={outline ? "outline" : ""}
 	>{ctaIcon !== "" && <span data-icon={ctaIcon} />}{ctaText}</a
 >
 <style>
@@ -76,14 +86,24 @@ const { ctaText, ctaUrl, ctaIcon = "", external = false } = Astro.props;
 				stroke-width: var(--border-size-2);
 			}
 		}
+		&.outline {
+			background-color: transparent;
+		}
+	}
+	[data-icon] {
+		background: var(--gradient-30);
+		inline-size: 2ch;
+		block-size: 2ch;
+		filter: drop-shadow(var(--_ink-shadow));
 	}
 	[data-icon="github"] {
 		--icon-github: url("https://api.iconify.design/mdi:github.svg") center /
 			contain no-repeat;
 		-webkit-mask: var(--icon-github);
-		background: var(--gradient-30);
-		inline-size: 2ch;
-		block-size: 2ch;
-		filter: drop-shadow(var(--_ink-shadow));
+	}
+	[data-icon="book"] {
+		--icon-github: url("https://api.iconify.design/mdi:book-open.svg") center /
+			contain no-repeat;
+		-webkit-mask: var(--icon-github);
 	}
 </style>
