--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,114 @@
 ---
-import MainLayout from "~/layouts/MainLayout.astro";
-import Card from "~/components/Card.astro";
-const title = "Astro & Open Props Starter";
-const description =
-	"A minimal starter template for creating your next website with Astro and Open Props.";
-const cta = "Use the template";
-const url = "https://github.com/cbontems/astro-open-props-starter";
+import { CollectionEntry, getCollection } from "astro:content";
+import { sortPosts } from "../helpers/posts";
+import siteInfo from "~/data/site-info";
+import Layout from "~/layouts/MainLayout.astro";
+import ButtonLink from "~/components/ButtonLink.astro";
+import PostPreview from "~/components/PostPreview.astro";
+import StyledHr from "~/components/StyledHr.astro";
+
+const posts = await getCollection("blog");
+
+const sortedPosts = sortPosts(posts);
+const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 ---
 
-<MainLayout title={title}>
-	<main>
-		<Card
-			title={title}
-			description={description}
-			ctaText={cta}
-			ctaUrl={url}
-			ctaIcon="github"
-			external={true}
-		/>
+<Layout
+	title={siteInfo.name}
+	description={siteInfo.description}
+	image={{ src: "/og/blog.jpg", alt: `The ${siteInfo.name} Blog` }}
+>
+	<main class="container">
+		<section id="hero">
+			<h1>Bienvenue!</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+				veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+				commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+				velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+				occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+				mollit anim id est laborum.
+			</p>
+			<div>
+				<ButtonLink
+					ctaText="Create your own blog"
+					ctaUrl="/repo/"
+					ctaIcon="github"
+					external={false}
+				/>
+				<ButtonLink
+					ctaText="Browse posts"
+					ctaUrl="/posts/"
+					ctaIcon="book"
+					external={false}
+					outline={true}
+				/>
+			</div>
+		</section>
+
+		<StyledHr rand />
+
+		{
+			featuredPosts.length > 0 && (
+				<>
+					<section id="featured">
+						<h2>Featured Posts</h2>
+						<ul>
+							{featuredPosts.map((post) => (
+								<li>
+									<PostPreview post={post} />
+								</li>
+							))}
+						</ul>
+					</section>
+					<StyledHr rand />
+				</>
+			)
+		}
+
+		<section id="recent-posts">
+			<h2>Latest Posts</h2>
+			<ul>
+				{
+					sortedPosts.map(
+						(post, index) =>
+							index < 4 && (
+								<li>
+									<PostPreview post={post} />
+								</li>
+							),
+					)
+				}
+			</ul>
+		</section>
 	</main>
-</MainLayout>
+</Layout>
 
 <style>
-	@import "open-props/src/props.media.css";
-	main {
-		min-height: 100dvb;
-		display: grid;
-		place-items: center;
+	#hero {
+		display: flex;
+		flex-direction: column;
+		gap: var(--size-6);
+		padding-block: var(--size-8);
+	}
+	div {
+		display: flex;
+		gap: var(--size-6);
+	}
+	ul {
+		max-inline-size: var(--size-content-3);
+		margin-inline: auto;
+		list-style: none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: var(--size-9);
+		padding-inline-start: 0;
+		margin-block: var(--size-9);
+	}
+	li {
+		max-inline-size: initial;
 	}
 </style>
