--- a/src/components/StyledHr.astro
+++ b/src/components/StyledHr.astro
@@ -27,8 +27,7 @@ switch (true) {
 	hr {
 		max-inline-size: var(--size-header-1);
 		margin-inline: auto;
-		margin-block-start: var(--size-4);
-		margin-block-end: var(--size-9);
+		margin-block: var(--size-9);
 		background-color: var(--link);
 		overflow: visible;
 		text-align: center;
